--- a/assets/stylesheets/phone.css
+++ b/assets/stylesheets/phone.css
@@ -1,4 +1,4 @@
-/* Main divs */
+/* Browser Size */
 .wrapper{
     display: inline-block;
     height: 800px;
@@ -19,20 +19,14 @@
     border: 1px solid black;
 
 }
-/* Top Bar */
 .topBar{
     display: inline-block;
-    height: 13%;
+    height: 10%;
     width: 100%;
     border: 1px solid black;
+    
 }
-.whiteLogo{
-    height: 100%;
-    width: 70px;
-    background-color: white;
-}
-
-.textAndEmail{
+.textAndEmailRow{
     display: inline-block;
     height: 60%;
     width: 100%;
@@ -46,21 +40,21 @@
 }
 .bottomLeftSide{
     display: inline-block;
-    width: 40%;
-    height: 100%;
+    width: 100%;
+    height: 40%;
     border: 1px solid black;
 
 }
 .bottomCenterLogo{
     display: inline-block;
-    width: 15%;
-    height: 100%;
+    width: 100%;
+    height: 20%;
     border: 1px solid black;
 }
 .bottomRightSide{
     display: inline-block;
-    width: 40%;
-    height: 100%;
+    width: 100%;
+    height: 35%;
     border: 1px solid black;
 }
 .plainFooter{
