--- a/assets/stylesheets/tablet.css
+++ b/assets/stylesheets/tablet.css
@@ -1,4 +1,4 @@
-/* Browser Size */
+/* Main divs */
 .wrapper{
     display: inline-block;
     height: 800px;
@@ -19,14 +19,20 @@
     border: 1px solid black;
 
 }
+/* Top Bar */
 .topBar{
     display: inline-block;
-    height: 10%;
+    height: 13%;
     width: 100%;
     border: 1px solid black;
-    
 }
-.textAndEmail{
+.whiteLogo{
+    height: 100%;
+    width: 70px;
+    background-color: white;
+}
+
+.textAndEmailRow{
     display: inline-block;
     height: 60%;
     width: 100%;
@@ -40,21 +46,21 @@
 }
 .bottomLeftSide{
     display: inline-block;
-    width: 100%;
-    height: 40%;
+    width: 40%;
+    height: 100%;
     border: 1px solid black;
 
 }
 .bottomCenterLogo{
     display: inline-block;
-    width: 100%;
-    height: 20%;
+    width: 15%;
+    height: 100%;
     border: 1px solid black;
 }
 .bottomRightSide{
     display: inline-block;
-    width: 100%;
-    height: 35%;
+    width: 40%;
+    height: 100%;
     border: 1px solid black;
 }
 .plainFooter{
