--- a/assets/stylesheets/phone.css
+++ b/assets/stylesheets/phone.css
@@ -3,65 +3,172 @@
     display: inline-block;
     height: 800px;
     width: 100%;
+    font-family: 'Roboto', sans-serif;
+
 }
 .topHalf {
     background-color: #4071B6;
     display: inline-block;
     height: 50%;
     width: 100%;
-    border: 1px solid black;
+    background-image: url('../images/recycle-back.png');
+    background-repeat: no-repeat;
+    background-position: 50px;
+    background-size: contain;
 }
 .bottomHalf{
     background-color: #4D7ABC;
     display: inline-block;
-    height: 40%;
+    height: 50%;
     width: 100%;
-    border: 1px solid black;
 
 }
 .topBar{
     display: inline-block;
-    height: 10%;
-    width: 100%;
-    border: 1px solid black;
-    
+    height: 15%;
+    width: 100%;    
+}
+.whiteLogo{
+    height: 80%;
+    width: 70px;
+    background-color: white;
+    margin-left: 20px;
+    display: inline-block;
+    color: #135FAB;
+    text-align: center;
+    font-weight: bold;
+    margin-top: 5px;
+}
+.rightSideLinks{
+    display: inline-block;
+    height: 80%;
+    width: 65%;
+    float: right;
+    margin-top: 5px;
+    margin-right: 20px;
+    font-size: 14px;
+    font-weight: bold;
+}
+.LINK{
+    display: inline-block;
+    height: 80%;
+    width: 30%;
+    text-align: center;
+    padding-top: 10px;
+    vertical-align: top;
+    color: white;
+}
+.topLinks{
+    color: white;
+    text-decoration: none;
+}
+.topLinks:hover{
+    color: white;
+    text-decoration: none;
 }
 .textAndEmailRow{
     display: inline-block;
     height: 60%;
     width: 100%;
-    border: 1px solid black;
+    font-size: 16px;
+    color: white;
+}
+.centerDiv{
+    width: 100%;
+    height: 70%;
+    text-align: center;
+    display: inline-block;
+    padding-top: 35px;
 }
 .checkAndText{
     display: inline-block;
-    height: 25%;
+    height: 40px;
     width: 100%;
-    border: 1px solid black;
+    color: white;
+    text-align: center;
 }
+.emailInput{
+    height: 34px;
+    width: 150px;
+    border-radius: 7px;
+    background-color: #004B8E;
+    color: #4B79BB;
+    border-style: none;
+}
+.emailInput::placeholder{
+    color: #4B79BB;
+    font-size: 16px;
+}
+.districtSelector{
+    height: 36px;
+    width: 150px;
+    border-radius: 7px;
+    background-color: #004B8E;
+    color: #4B79BB;
+    border-style: none;
+    font-size: 14px;
+}
+.goButton{
+    height: 36px;
+    width: 100px;
+    border-radius: 7px;
+    background-color: white;
+    border-color: #004B8E;
+    color: #004B8E;
+    font-weight: bold;
+    font-size: 16px;
+    margin-top: 10px;
+}
+.checkmark{
+    display: inline-block;
+    height: 15px;
+}
+.receiveUpdates{
+    display: inline-block;
+}
+/* Bottom Parts */
 .bottomLeftSide{
     display: inline-block;
     width: 100%;
-    height: 40%;
-    border: 1px solid black;
+    height: 30%;
+    vertical-align: top;
+    text-align: center;
+}
+#result{
+    font-size: 30px;
+    display: inline-block;
+    color: #5AFFA8;
+}
+.bottomLeftText{
+    font-size: 16px;
+    display: block;
+    color: #FBFCFD;
+    text-align: center;
 
 }
 .bottomCenterLogo{
-    display: inline-block;
+    display: block;
     width: 100%;
-    height: 20%;
-    border: 1px solid black;
+    height: 30%;
+    padding-top: 10px;
+    padding-left: 115px;
 }
 .bottomRightSide{
     display: inline-block;
     width: 100%;
     height: 35%;
-    border: 1px solid black;
+    overflow: scroll;
+    text-align: center;
+
 }
 .plainFooter{
     height: 10%;
     width: 100%;
-    background-color: #FFFFFF;
+    background-color: white;
     display: inline-block;
-    border: 1px solid black;
+    text-align: center;
+    padding-top: 25px;
+    color: #4071B6;
+    font-size: 14px;
 }
 
