--- a/assets/stylesheets/phone.css
+++ b/assets/stylesheets/phone.css
@@ -172,3 +172,25 @@
     font-size: 14px;
 }
 
+.districtMarker{
+    display: flex;
+    height: 20px;
+    font-size: 12px;
+    font-weight: 600;
+    border-radius: 5px;
+    color: #9BB5DA;
+    margin-left: 20px;
+}
+.barre {
+    height: 18px;
+    width: 0px;
+    background-color: #004B8E;
+    transition: width 2s linear;
+    margin-left: 10px;
+    max-width: 150px; 
+    border-radius: 5px;
+}
+
+.pledgeAmount{
+    margin-left: 30px;
+}
